fix: destinations should not be toConnect by default and all revealed cities not reached should be visible on the filter

--- a/expeditions.css
+++ b/expeditions.css
@@ -304,6 +304,8 @@
   opacity: 1;
 }
 .city[data-revealed-by] {
+  z-index: 8;
+  opacity: 1;
   border-radius: 50px;
   box-sizing: border-box;
   background-image: url("img/tokens.png");
