--- a/src/map/_map.scss
+++ b/src/map/_map.scss
@@ -134,6 +134,8 @@
 		opacity: 1;
 	}
 	&[data-revealed-by] {
+		z-index: 8;
+		opacity: 1;
 		border-radius: 50px;
 		box-sizing: border-box;
 		background-image: url("img/tokens.png");
